# sagepick.core

./: .coveragerc  .dockerignore  .env.example  .gitignore  .interrogate.toml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  Dockerfile  LICENSE  README.md  alembic.ini  bandit.yaml  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  main.py
app/api/: api.py  deps.py
app/api/endpoints/: jobs.py  movies.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: discover.py  jobs.py  movies.py  recommendations.py
app/clients/: __init__.py  base.py  tmdb_client.py  tmdb_models.py
app/core/: __init__.py  api_client.py  db.py  exceptions.py  job_execution.py  logging.py  middleware.py  redis.py  scheduler.py  settings.py  tmdb.py
app/crud/: __init__.py  base.py  genre.py  job_log.py  job_status.py  keyword.py  media_category.py  movie.py  movie_discovery_state.py
app/jobs/: __init__.py  category_refresh.py  change_tracking.py  dataset_export.py  movie_discovery.py
app/models/: __init__.py  api_models.py  genre.py  job_log.py  job_status.py  keyword.py  media_category.py  media_category_movie.py  movie.py  movie_discovery_state.py  movie_genre.py  movie_keyword.py
app/services/: __init__.py  category_service.py  hydration_service.py
app/services/storage/: dataset_builder.py  dataset_writer.py
app/services/tmdb_client/: __init__.py  client.py  models.py
app/utils/: helpers.py  movie_processor.py  pagination.py  rate_limiter.py
app/utils/cache/: __init__.py  genre_cache.py  keyword_cache.py
app/utils/processors/: __init__.py  genre_processor.py  keyword_processor.py
docker/: entrypoint.sh
lib/: __init__.py  api_client.py
migrations/: env.py  script.py.mako
migrations/versions/: 22a8b5bd1b6d_add_hydration_tracking_fields_to_movie_.py  2a758d901326_drop_media_category_tables_for_redis_.py  2d63525d440d_add_mediacategory_and_.py  2f989961ca75_simplify_job_logs_and_status.py  486624090a52_add_job_status_and_job_logs_tables.py  854792376e93_widen_movie_columns.py  96f122e56553_add_movie_discovery_state_table.py  a6d92fbd1b8d_added_desscription_to_categories.py  b05fc6fa11df_initial_migration_with_movies_genres_.py  ed31b670a334_add_job_status_and_job_logs_tables.py  f28e624e4e66_initial_v1_migrations.py
scripts/: clear_tables.py  job_status_report.py  purge_job_data.py  remove_job.py  reset_database.py  seed.py
server/: docker-compose.yml
tests/: test_api_jobs.py  test_api_movies.py  test_crud_media_category.py  test_crud_movie_relationships.py  test_dataset_export_job.py  test_jobs_movie_discovery.py  test_movie_processor_batch.py  test_movie_processor_caches.py  test_movie_processor_process_tmdb_movie.py  test_tmdb_client.py
tests/helpers/: fakes.py
