[project]
name = "sagepick-core"
version = "0.1.3"
authors = [
    { name = "geetheswar-v", email = "geetheswar.edu@gmail.com" },
    { name = "saiteja-velpula", email = "saitejavelpula.nss@gmail.com" }
]
description = "Sagepick Core Backend Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.37.0",
    "apscheduler>=3.10.0",
    "redis>=6.4.0",
    "pyjwt>=2.10.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
extend-exclude = ["migrations"]
target-version = "py312"
